feat: Update project configuration and enhance ingredient validation
- Added UTF-8 encoding for the img directory in encodings.xml.
- Updated JDK version from 17 to 24 in misc.xml.
- Modified AdminIngredientController to include DatabaseConfig import.
- Updated DashboardController to change welcome message and fix package declaration.
- Enhanced ManageIngredientPriceViewController with ingredient and price validation methods.
- Removed deprecated DashboardController class and updated created/input files lists.
- Updated various class files in the target directory to reflect recent changes.